# LINPRO

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LINPRO_CONTEXT.md  LINPRO_PHILOSOPHY.md  PROJECT_TREE.txt  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/workflows/: build.yml  lint.yml  tests.yml
benchmarks/: benchmark_example.py  polyline_benchmark.py  segment_benchmark.py  vector_benchmark.py
decisions/: ADR-004_GEOPANDAS.md  ADR-006_CATASTRO.md  ADR-007_CARRETERAS.md
design/: database.drawio  geometry_engine.drawio  gui.drawio  modules.drawio  workflow.drawio
docs/: PROJECT_STATUS.md
docs/00_Project/: 000_Project_Charter.md  001_Project_Objectives.md  002_Project_Roadmap.md  003_Project_Glossary.md  004_Project_Context.md
docs/01_Functional/: FR-0001_Definir_Eje.md  FR-0002_Calcular_PK.md  FR-0003_Generar_Buffer.md  FR-0004_Calcular_Intersecciones.md  FR-0005_Analizar_Municipios.md  FR-0006_Analizar_Catastro.md  FR-0007_Analizar_Carreteras.md  FR-0008_Analizar_Hidrografia.md  FR-0009_Exportar_Excel.md  FR-0010_Exportar_DXF.md  UC-001_Analizar_Eje.md  UC-002_Obtener_Municipios.md  UC-003_Obtener_Parcelas.md  UC-004_Cruce_Carretera.md
docs/02_Technical/: Coding_Standards.md  Dependencies.md  Docstring_Convention.md  Error_Handling.md  Naming_Convention.md  Performance_Guidelines.md  Python_Guidelines.md  Python_Style_Guide.md  Repository_Rules.md  Review_Checklist.md  Testing_Guidelines.md
docs/03_Architecture/: Architecture_Principles.md  Core_Architecture.md  Database_Architecture.md  GEOMETRY_KERNEL_SPEC.md  GUI_Architecture.md  Geometry_Architecture.md  Overall_Architecture.md  Plugin_Architecture.md
docs/05_API/: API_Reference.md  Public_API_Rules.md
docs/06_Testing/: Testing_Strategy.md
docs/07_Development/: Development_Workflow.md  Environment_Setup.md
docs/08_Releases/: Release_Policy.md
docs/RFC/: RFC-0001-Geometry-Kernel.md  RFC-0002-Point.md  RFC-0003-BoundingBox.md  RFC-0004A-Algebra-Vectorial.md
docs/adr/: ADR-001_ARQUITECTURA_GENERAL.md  ADR-002_PYTHON.md  ADR-003_PYSIDE6.md  ADR-005_AUTOCAD.md  ADR-008_RIOS.md  ADR-009_EXCEL.md  ADR-010_INSTALADOR.md
docs/analysis/: RFC-0006-Spatial-Analysis-Framework.md
docs/specifications/: 000_PROYECTO.md  001_VISION.md  002_OBJETIVOS.md  003_GLOSARIO.md  004_REQUISITOS_FUNCIONALES.md  005_REQUISITOS_NO_FUNCIONALES.md  006_ARQUITECTURA.md  007_MODELO_DATOS.md  008_GUI.md  009_GEOMETRIA.md  010_PK.md  011_MUNICIPIOS.md  012_CATASTRO.md  013_CARRETERAS.md  014_CAMINOS.md  015_RIOS.md  016_INFRAESTRUCTURAS.md  017_EXCEL.md  018_DWG.md  019_CONFIGURACION.md  020_TESTS.md  021_PLAN_DESARROLLO.md  022_REGLAS_IA.md  023_API.md  (+6 more)
plugins/: README.md  __init__.py
templates/: class_template.py  exception_template.py  module_API.md  module_README.md  test_template.py
(+160 files in other folders)
