[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "linpro"
version = "0.0.1"
description = "Librería para el análisis de infraestructuras lineales"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "LINPRO Team"}
]

[project.urls]
Repository = "https://github.com/copu72/LINPRO"

[tool.setuptools.packages.find]
where = ["src"]
include = ["linpro*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
