[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linpro"
version = "0.1.0"
description = "Plataforma Python para el análisis de infraestructuras lineales"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "LINPRO Team"}
]

[project.urls]
Repository = "https://github.com/copu72/LINPRO"

[tool.setuptools.packages.find]
where = ["src"]
include = ["linpro*", "linpro.core*", "linpro.app*", "linpro.config*", "linpro.events*", "linpro.plugins*", "linpro.logging*", "linpro.exceptions*", "linpro.project*", "linpro.settings*", "linpro.resources*", "linpro.utils*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]