[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linpro"
version = "0.1.0"
description = "Plataforma Python para el análisis de infraestructuras lineales"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "LINPRO Team"}
]

[project.urls]
Repository = "https://github.com/copu72/LINPRO"

[tool.setuptools.packages.find]
where = ["src"]
include = ["linpro*", "linpro.core*", "linpro.core.app*", "linpro.core.config*", "linpro.core.events*", "linpro.core.exceptions*", "linpro.core.logging*", "linpro.core.plugins*", "linpro.core.project*", "linpro.core.settings*", "linpro.core.version*", "linpro.models*", "linpro.api*", "linpro.io*", "linpro.services*", "linpro.engine*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]